[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cave-unicorn"
version = "0.1.0"
description = "UNICORN distribution module of the SANCREV SDK (L9 cave-auxiliary lib): blog -> live website connector + the distribution-stack setup interface"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Isaac Wostrel-Rubin", email = "isaac@sancovp.com" }]
dependencies = [
    "markdown>=3.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
cave-unicorn = "cave_unicorn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cave_unicorn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
